fixed question spacing

--- a/main.css
+++ b/main.css
@@ -68,8 +68,8 @@ h1 {
     color: #35E3C1;
     text-shadow: 2px 2px 4px #000000;
     padding: 1rem;
-    width: 85%;
 }
+
 
 .option {
     margin-right: 10px;
